--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -445,7 +445,7 @@ iframe {
     }
 }
 
-@media only screen and (min-width: 360px) {
+@media only screen and (max-width: 361px) {
     .gif-image{
         width: 138px;
     }
