--- a/src/components/common/MobileView/mobileView.scss
+++ b/src/components/common/MobileView/mobileView.scss
@@ -163,7 +163,7 @@
     }
 }
 
-@media only screen and (min-width: 360px) {
+@media only screen and (max-width: 361px) {
     .gif-image{
         width: 138px;
     }
